fixing issues with images not showing on full deployment

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -317,7 +317,7 @@ main {
 }
 
 .treatments-image3 {
-    background: url("../images/root\ canal\ treatment-078475-edited.webp") no-repeat center center/cover;
+    background: url("../images/root-canal-treatment-078475-edited.webp") no-repeat center center/cover;
     width: 100%;
     height: 100%;
 }
